Enabling DA to read multiple concrete blueprints, fixing blueprint structure, modifying resource API calls
